[gd_scene load_steps=2 format=2]

[ext_resource path="res://Editor/ed_block.gd" type="Script" id=1]

[node name="ed_Path" type="Control"]
show_behind_parent = true
margin_right = 568.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="Movable" type="Control" parent="."]
show_behind_parent = true
margin_right = 568.0
margin_bottom = 96.0
mouse_filter = 2

[node name="ZIndex" type="Node2D" parent="Movable"]

[node name="Base" type="Control" parent="Movable/ZIndex"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 568.0
margin_bottom = 96.0
rect_min_size = Vector2( 568, 96 )
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="Movable/ZIndex/Base"]
self_modulate = Color( 0.890196, 0.988235, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cross" type="Button" parent="Movable/ZIndex/Base"]
margin_left = 536.0
margin_top = 8.0
margin_right = 560.0
margin_bottom = 32.0
focus_mode = 0
enabled_focus_mode = 0
text = "x"

[node name="Label" type="Label" parent="Movable/ZIndex/Base"]
margin_top = 48.0
margin_right = 16.0
margin_bottom = 64.0
text = "0"
align = 1
valign = 1

[node name="Addons" type="Control" parent="Movable/ZIndex"]
margin_right = 568.0
margin_bottom = 64.0
rect_min_size = Vector2( 568, 64 )
mouse_filter = 2

[node name="Label" type="Label" parent="Movable/ZIndex/Addons"]
margin_right = 48.0
margin_bottom = 32.0
text = "PATH"
align = 1
valign = 1

[node name="TextEdit" type="TextEdit" parent="Movable/ZIndex/Addons"]
margin_left = 72.0
margin_top = 8.0
margin_right = 520.0
margin_bottom = 56.0

[connection signal="mouse_entered" from="Movable/ZIndex/Base/PanelContainer" to="." method="_on_PanelContainer_mouse_entered"]
[connection signal="mouse_exited" from="Movable/ZIndex/Base/PanelContainer" to="." method="_on_PanelContainer_mouse_exited"]
[connection signal="pressed" from="Movable/ZIndex/Base/Cross" to="." method="_on_Cross_pressed"]
